[gd_scene load_steps=12 format=1]

[ext_resource path="res://scenes/umbra.gd" type="Script" id=1]
[ext_resource path="res://images/umbrattacks.png" type="Texture" id=2]
[ext_resource path="res://other/ingame.fnt" type="BitmapFont" id=3]
[ext_resource path="res://scenes/spike.tscn" type="PackedScene" id=4]
[ext_resource path="res://sounds/bite.tres" type="Sample" id=5]
[ext_resource path="res://sounds/laugh.tres" type="Sample" id=6]





[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 16, 10 )

[sub_resource type="Animation" id=3]

length = 2.0
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Face:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 2 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/Face:frame")
tracks/1/interp = 2
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.95, 1.5, 1.8, 1.95 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 20, 20, 20, 23 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Head/Face:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.95, 1.05, 1.15, 1.25, 1.35, 1.45 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -23 ), Vector2( 0, -23 ), Vector2( 0, -24 ), Vector2( 0, -23 ), Vector2( 0, -24 ), Vector2( 0, -23 ), Vector2( 0, -24 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:vulnerable")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 2 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:create_bite")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0.5 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SamplePlayer:play/play")
tracks/5/interp = 0
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0.4, 0.95, 1.1, 1.25 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ "bite", "laugh", "laugh", "laugh" ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Head/Face:visibility/opacity")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0, 1.5, 2 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=1]

length = 2.0
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Face:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 2 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/Face:frame")
tracks/1/interp = 2
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.75, 0.85, 0.95 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 17, 21, 23 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Head/Face:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -23 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:create_bite")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0.5 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:vulnerable")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 2 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SamplePlayer:play/play")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0.4 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ "bite" ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Head/Face:visibility/opacity")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 1.5, 2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=6]

length = 1.0
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Face:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/Face:frame")
tracks/1/interp = 2
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.75, 0.85, 0.95 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 17, 21, 23 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Head/Face:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -23 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:create_bite")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0.5 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:vulnerable")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SamplePlayer:play/play")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0.4 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ "bite" ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Head/Face:visibility/opacity")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0, 0.75, 1 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.0 ]
}

[sub_resource type="SampleLibrary" id=4]

samples/bite = {
"db": 18.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}
samples/laugh = {
"db": 5.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 6 )
}

[node name="Umbra" type="Node2D" groups=[
"Umbra",
]]

script/script = ExtResource( 1 )
__meta__ = {
"__editor_plugin_screen__": "Script",
"_edit_lock_": true
}
active = false
vulnerable = false
create_bite = false

[node name="Head" type="Node2D" parent="."]

[node name="Face" type="Sprite" parent="Head"]

visibility/visible = false
visibility/opacity = 0.0
transform/pos = Vector2( 0, -23 )
texture = ExtResource( 2 )
vframes = 9
hframes = 8
frame = 23

[node name="Hitbox" type="Area2D" parent="Head"]

process/pause_mode = 2
editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( 0, -32 )
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -9 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Collision2d" type="CollisionShape2D" parent="Head/Hitbox"]

transform/pos = Vector2( 0, -9 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Appear = SubResource( 3 )
anims/Bite = SubResource( 1 )
anims/ShortBite = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="SpikeTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -20.0
margin/top = -41.0
margin/right = 20.0
margin/bottom = -2.0
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SwipeLeft" type="Node2D" parent="."]

transform/pos = Vector2( -75, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="SwipeMid" type="Node2D" parent="."]

__meta__ = {
"_edit_group_": true
}

[node name="SwipeRight" type="Node2D" parent="."]

transform/pos = Vector2( 75, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Spike" parent="." instance=ExtResource( 4 )]

transform/pos = Vector2( 0, -4 )

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 4 )
default/volume_db = -7.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 0.0
default/filter/resonance = 0.0
default/filter/gain = 0.0
default/reverb_room = 0
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="Hitbox" type="Area2D" parent="."]

input/pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="SpikeTimer" to="." method="_on_SpikeTimer_timeout"]


